# ai_assist_V2

./: .gitignore  README.md
ai_assist_V2/: config.py  main.py  pyproject.toml  requirements.txt
ai_assist_V2/core/: __init__.py  context_manager.py  dispatcher.py  exceptions.py  llm_provider.py  storage.py
ai_assist_V2/data/: schema.sql
ai_assist_V2/tests/: conftest.py  test_ast.py  test_context.py  test_research.py  test_storage.py
ai_assist_V2/tools/: __init__.py  ast_summarizer.py
ai_assist_V2/utils/: logger.py  token_counter.py  validators.py
ai_assist_V2/workers/: __init__.py  research_worker.py
